--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <div class="container">
           <div class="hero">
 
-            <h1 class="title" data-aos="fade-right">Your place for shopping.</h1>
-            <p class="text" data-aos="fade-left">Online shopping is the best way to buy everything you need in two clicks.</p>
+            <h1 class="title js_main-title" data-aos="fade-right"></h1>
+            <p class="text js_sub-title" data-aos="fade-left"></p>
             <a href="./shop.html" data-aos="fade-right" class="btn">my cart</a>
 
 
