--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <h1 class="title js_main-title" data-aos="fade-right"></h1>
             <p class="text js_sub-title" data-aos="fade-left"></p>
-            <a href="./shop.html" data-aos="fade-right" class="btn">my cart</a>
+            <a href="#products" data-aos="fade-right" class="btn">products</a>
 
 
           </div>
@@ -130,7 +130,7 @@
 
       <div class="products__wrapper hero-products">
         <div class="container">
-          <section class="products">
+          <section class="products" id="products">
 
             <h3 class="products__title">Our Products</h3>
             <div class="sub-title__box">
